--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <ol id="splits"></ol>
     </section>
 
-    <div class="leash leash-top"></div>
+    <div class="leash-leash-top"></div>
 
     <section id="clock">
       <div id="sphere">
